# qmlDessin

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/qml/: mainwindow.qml  qml.qrc  qmlDessin.qml
cmake/module/: list_header_directories_to_include.cmake  list_source_files.cmake
